@@ -1,4 +1,5 @@
 Add an offline inbox for members
+Allow deletion of member accounts in profile
 
 Version 1.18 - Apr. 28, 2016
 Add time zone settings
